# convert-nifti-to-glb

./: .index.html.swp  .index.py.swp  CNAME  Dockerfile  Makefile  README  index.html  index.py  index.toml  main.py  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: tests.yml  workflow.yml
docs/: CNAME  index.html  index.py  package.json
docs/misc/: index.toml
docs/prm/: index.py  main.py  pyscript.toml
docs/python/: Dockerfile  main.py  pyproject.toml
python/: Dockerfile  main.py  pyproject.toml  requirements.txt
python/prm/: runtime_hook.py
python/python/: main.py  pyproject.toml
