[project]
dependencies = [
  "fire==0.5.0",
  "gooey==1.0.8.1",
  "nibabel==5.1.0",
  "pyinstaller==6.2.0",
  "scikit-image==0.22.0",
  "trimesh==4.0.5"
]
name = "UNKNOWN"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.3.2",
  "djlint==1.34.0",
  "mypy==1.6.1",
  "ruff==0.1.6",
  "ssort==0.11.6",
  "toml-sort==0.23.1"
]
