[project]
dependencies = [
  "fire==0.5.0",
  "gooey==1.0.8.1",
  "nibabel==5.2.0",
  "pyinstaller==6.3.0",
  "scikit-image==0.22.0",
  "trimesh==4.0.8"
]
name = "UNKNOWN"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.4.0",
  "djlint==1.34.1",
  "mypy==1.8.0",
  "ruff==0.1.10",
  "ssort==0.12.0",
  "toml-sort==0.23.1"
]
