[project]
dependencies = [
  "fire==0.5.0",
  "nibabel==5.2.1",
  "scikit-image==0.22.0",
  "trimesh==4.1.0"
]
name = "convert-nifti-to-glb"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.4.3",
  "djlint==1.34.1",
  "mypy==1.8.0",
  "ruff==0.3.0",
  "ssort==0.12.4",
  "toml-sort==0.23.1"
]

[project.scripts]
convert_nifti_to_glb = "main:main_cli"

[tool.setuptools]
py-modules = ["main"]
